Sistemata formattazione stili

--- a/index.html
+++ b/index.html
@@ -7,70 +7,57 @@ overview: true
 <section class="intro">
   <div class="grid">
     <div class="unit whole center-on-mobiles">
-      <p class="first">Transform your plain text into static&nbsp;websites and&nbsp;blogs.</p>
+      <p class="first">Trasforma il tuo Business.<br>usa iCommerce.</p>
     </div>
   </div>
 </section>
 <section class="features">
   <div class="grid">
     <div class="unit one-third">
-      <h2>Simple</h2>
+      <h2>Semplice</h2>
       <p>
-        No more databases, comment moderation, or pesky updates to install—just <em>your content</em>.
+        Non devi installare nulla nella tua azienda per usare iCommerce. Scaricalo dall' Apple Store, installa il Connettere con il tuo gestionale e comincia a usarlo.
       </p>
-      <a href="/docs/usage/">How Jekyll works &rarr;</a>
+      <a href="/docs/main-semplice/">Come funziona &rarr;</a>
     </div>
     <div class="unit one-third">
-      <h2>Static</h2>
-      <p><a href="http://daringfireball.net/projects/markdown/">Markdown</a> (or <a href="http://redcloth.org/textile">Textile</a>), <a href="https://github.com/Shopify/liquid/wiki">Liquid</a>, HTML <span class="amp">&amp;</span> CSS go in. Static sites come out ready for deployment.</p>
-      <a href="/docs/templates/">Jekyll template guide &rarr;</a>
+      <h2>Affidabile</h2>
+      <p>
+          iCommerce funziona sempre, anche quando non c'è connessione. Tutti i dati sono sul tuo iPad e decidi tu quanto sincronizzarli con il tuo gestionale.
+      </p>
+
+      <a href="/docs/main-affidabile/">Architettura &rarr;</a>
     </div>
     <div class="unit one-third">
-      <h2>Blog-aware</h2>
+      <h2>Veloce</h2>
       <p>
-        Permalinks, categories, pages, posts, and custom layouts are all first-class citizens here.
+        iCommerce è stato progettato per essere veloce. E' sviluppato in modalità nativa e le sue prestazioni sono velocissime anche con enormi quantità di dati.
       </p>
-      <a href="/docs/migrations/">Migrate your blog &rarr;</a>
+      <a href="/docs/main-veloce/">Vantaggi &rarr;</a>
     </div>
     <div class="clear"></div>
   </div>
 </section>
+
 <section class="quickstart">
   <div class="grid">
-    <div class="unit golden-small center-on-mobiles">
-      <h3>Get up and running <em>in&nbsp;seconds</em>.</h3>
-    </div>
-    <div class="unit golden-large code">
-      <p class="title">Quick-start Instructions</p>
-      <div class="shell">
-        <p class="line">
-          <span class="path">~</span>
-          <span class="prompt">$</span>
-          <span class="command">gem install jekyll</span>
-        </p>
-        <p class="line">
-          <span class="path">~</span>
-          <span class="prompt">$</span>
-          <span class="command">jekyll new my-awesome-site</span>
-        </p>
-        <p class="line">
-          <span class="path">~</span>
-          <span class="prompt">$</span>
-          <span class="command">cd my-awesome-site</span>
-        </p>
-        <p class="line">
-          <span class="path">~/my-awesome-site</span>
-          <span class="prompt">$</span>
-          <span class="command">jekyll serve</span>
-        </p>
-        <p class="line">
-          <span class="output"># => Now browse to http://localhost:4000</span>
-        </p>
-      </div>
-    </div>
-    <div class="clear"></div>
+
+
+  <div class="unit one-third"> </div>
+  <div class="unit one-third">
+
+    <a href="https://itunes.apple.com/app/id567772952">
+      <img src="/img/appstore.png" width="70%" height="70%" alt="appstore">
+    </a>
+
+
   </div>
+
+  <div class="unit one-third">  </div>
+  <div class="clear"></div>
+</div>
 </section>
+<!--
 <section class="free-hosting">
   <div class="grid">
     <div class="unit whole">
@@ -88,3 +75,4 @@ overview: true
     </div>
   </div>
 </section>
+-->
