--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 ---
 layout: default
-title: Jekyll &bull; Simple, blog-aware, static sites
+title: iCommerce &bull; l'App mobile che trasforma il tuo Business
 overview: true
 ---
 
 <section class="intro">
   <div class="grid">
     <div class="unit whole center-on-mobiles">
-      <p class="first">Trasforma il tuo Business.<br>usa iCommerce.</p>
+      <p class="first">Trasforma il tuo Business,<br>usa iCommerce.</p>
     </div>
   </div>
 </section>
@@ -16,24 +16,24 @@ overview: true
     <div class="unit one-third">
       <h2>Semplice</h2>
       <p>
-        Non devi installare nulla nella tua azienda per usare iCommerce. Scaricalo dall' Apple Store, installa il Connettere con il tuo gestionale e comincia a usarlo.
+        Puoi cominciare subito a usare iCommerce. Scaricalo dall' Apple Store, installa il Connettere per il tuo gestionale e comincia a usarlo.
       </p>
-      <a href="/docs/main-semplice/">Come funziona &rarr;</a>
+      <a href="/docs/home/">Inizia&rarr;</a>
     </div>
     <div class="unit one-third">
       <h2>Affidabile</h2>
       <p>
-          iCommerce funziona sempre, anche quando non c'è connessione. Tutti i dati sono sul tuo iPad e decidi tu quanto sincronizzarli con il tuo gestionale.
+          iCommerce funziona sempre, anche quando non c'è connessione, perchè tutti i dati sono sul tuo iPad e decidi tu quanto aggiornarli.
       </p>
 
-      <a href="/docs/main-affidabile/">Architettura &rarr;</a>
+      <a href="/docs/come-funziona/">Come funziona &rarr;</a>
     </div>
     <div class="unit one-third">
       <h2>Veloce</h2>
       <p>
-        iCommerce è stato progettato per essere veloce. E' sviluppato in modalità nativa e le sue prestazioni sono velocissime anche con enormi quantità di dati.
+        iCommerce è stato progettato per essere veloce. E' sviluppato in modalità nativa e le sue prestazioni sono velocissime anche con grandi quantità di dati.
       </p>
-      <a href="/docs/main-veloce/">Vantaggi &rarr;</a>
+      <a href="/docs/installazione/">Installazione &rarr;</a>
     </div>
     <div class="clear"></div>
   </div>
