--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: iCommerce &bull; l'App mobile che trasforma il tuo Business
+title: iCommerce &bull; l'Applicazione mobile che trasforma il tuo Business
 overview: true
 ---
 
