--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ overview: true
       <p>
         iCommerce è stato progettato per essere veloce. E' sviluppato in modalità nativa e le sue prestazioni sono velocissime anche con grandi quantità di dati.
       </p>
-      <a href="{{ site.baseurl }}/docs/installazione/">Installazione &rarr;</a>
+      <a href="{{ site.baseurl }}/docs/installazione-app/">Installazione &rarr;</a>
     </div>
     <div class="clear"></div>
   </div>
