--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
       <p>
         iCommerce è stato progettato per essere veloce. E' sviluppato in modalità nativa e le sue prestazioni sono velocissime anche con grandi quantità di dati.
       </p>
-      <a href="/docs/installazione/">Installazione &rarr;</a>
+      <a href="/docs/installazione-app/">Installazione &rarr;</a>
     </div>
     <div class="clear"></div>
   </div>
