publish: Fix minori in home page
generated from commit fbae5e1a362e300f34b7b501126e6718a4220f74

--- a/index.html
+++ b/index.html
@@ -106,14 +106,14 @@
     <div class="unit one-third">
       <h2>Semplice</h2>
       <p>
-        Puoi cominciare subito a usare iCommerce. Scaricalo dall' Apple Store, installa il Connettere per il tuo gestionale e comincia a usarlo.
+        Puoi cominciare subito a usare iCommerce. Scaricalo dall' Apple Store, installa il Connettore per il tuo gestionale e comincia ad usarlo.
       </p>
       <a href="/docs/home/">Inizia&rarr;</a>
     </div>
     <div class="unit one-third">
       <h2>Affidabile</h2>
       <p>
-          iCommerce funziona sempre, anche quando non c'è connessione, perchè tutti i dati sono sul tuo iPad e decidi tu quanto aggiornarli.
+          iCommerce funziona sempre, anche quando non c'è connessione, perchè tutti i dati sono sul tuo iPad e decidi tu quando aggiornarli.
       </p>
 
       <a href="/docs/come-funziona/">Come funziona &rarr;</a>
